# aws_app

./: .gitignore  app.py  pyproject.toml
config/: __init__.py  environment.py  logconfig.py
helpers/: __init__.py  general.py  pdf.py
